added missing files

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <base href="/">
         <title>Stater MEAN Stack SPA</title>
         <!-- CSS -->
         <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css" />
@@ -19,7 +20,7 @@
         <script src="js/appRoutes.js"></script>
         <script src="js/app.js"></script>
     </head>
-    <body ng-app="sampleApp" ng-controller="Nerdcontroller">
+    <body ng-app="sampleApp" ng-controller="MainController">
         <div class="container">
             <!-- HEADER -->
             <nav class="navbar navbar-inverse">
