--- a/public/views/index.html
+++ b/public/views/index.html
@@ -23,7 +23,7 @@
     <body ng-app="sampleApp" ng-controller="MainController">
         <div class="container">
             <!-- HEADER -->
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-inverse" ng-show="IsLoggedIn()">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Stencil: Node and Angular</a>
                 </div>
