--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
 <!-- public/views/home.html -->
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" ng-controller="MainController">
     <h1>Home Page</h1>  
     <p>{{tagline}}</p>
 </div>
