--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,19 +16,25 @@
         <!-- ANGULAR CUSTOM -->
         <script src="js/controllers/MainCtrl.js"></script>
         <script src="js/controllers/NerdCtrl.js"></script>
+        <script src="js/controllers/NavCtrl.js"></script>
+        <script src="js/controllers/LoginCtrl.js"></script>
+        <script src="js/controllers/SignupCtrl.js"></script>
         <script src="js/services/NerdService.js"></script>
+        <script src="js/services/NavService.js"></script>
+        <script src="js/services/LoginService.js"></script>
+        <script src="js/services/SignupService.js"></script>
         <script src="js/appRoutes.js"></script>
         <script src="js/app.js"></script>
     </head>
-    <body ng-app="sampleApp" ng-controller="MainController">
+    <body ng-app="sampleApp">
         <div class="container">
             <!-- HEADER -->
-            <nav class="navbar navbar-inverse" ng-show="IsLoggedIn()">
+            <nav class="navbar navbar-inverse" ng-controller="NavController" ng-show="IsLoggedIn()">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Stencil: Node and Angular</a>
                 </div>
                 <!-- LINK TO OUR PAGES.  ANGULAR HANDLES THE ROUTING HERE -->
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" ng-controller="MainController">
                     <li><a href="/nerds">Nerds</a></li>
                 </ul>
             </nav>
