--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -2,37 +2,37 @@
 <link rel="stylesheet" href="css/signup.css" />
 <div class="row" ng-controller="SignupController">
     <div class="col-lg-offset-4 col-md-4 signup-form-bg">
-            <form action="/signup" method="POST" class="text-center">
+            <form name="signupForm" ng-submit="Submit(signupForm.$valid)" method="POST" class="text-center">
             <h2>Signup</h2>
                 <fieldset>
                     <div class="form-group">
                         <label class="control-label input-group">
                             <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        <input type="text" class="form-control" name="user.profile.firstname" placeholder="First Name">
+                        <input type="text" class="form-control" ng-model="user.profile.firstname" placeholder="First Name" required>
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control-label input-group">
                             <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        <input type="text" class="form-control" name="user.profile.lastname" placeholder="Last Name">
+                        <input type="text" class="form-control" ng-model="user.profile.lastname" placeholder="Last Name" required>
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control-label input-group">
                             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                        <input type="email" class="form-control" name="user.profile.email" placeholder="you@email">
+                        <input type="email" class="form-control" ng-model="user.profile.email" placeholder="you@email" required>
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control-label input-group">
                             <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        <input type="text" class="form-control" name="local.username" placeholder="Username">
+                        <input type="text" class="form-control" ng-model="user.local.username" placeholder="Username" required>
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control-label input-group">
                             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                        <input type="password" class="form-control" name="local.password" placeholder="Password">
+                        <input type="password" class="form-control" ng-model="user.local.password" placeholder="Password" required>
                         </label>
                     </div>
                 </fieldset>
